--- a/app/src/main/res/xml/pref_config.xml
+++ b/app/src/main/res/xml/pref_config.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen
+<androidx.preference.PreferenceScreen
 >
 
 
-</PreferenceScreen>
+</androidx.preference.PreferenceScreen>
