--- a/app/src/main/res/layout/fragment_find_book.xml
+++ b/app/src/main/res/layout/fragment_find_book.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <io.legado.app.ui.widget.TitleBar
             android:id="@+id/title_bar"
@@ -13,4 +14,5 @@
             app:layout_constraintTop_toTopOf="parent"
             app:title="@string/find"/>
 
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
