--- a/app/src/main/res/layout/fragment_book_source.xml
+++ b/app/src/main/res/layout/fragment_book_source.xml
@@ -14,4 +14,9 @@
             app:layout_constraintTop_toTopOf="parent"
             app:title="@string/book_source"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
