--- a/app/src/main/res/layout/item_book_source.xml
+++ b/app/src/main/res/layout/item_book_source.xml
@@ -1,73 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
+              android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:padding="16dp"
+              android:orientation="horizontal"
+              android:layout_gravity="center_vertical">
 
-    <LinearLayout
-            android:layout_width="match_parent"
+    <io.legado.app.lib.theme.view.ATECheckBox
+            android:id="@+id/cb_book_source"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="16dp">
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:singleLine="true"
+            android:text=""
+            android:textColor="@color/tv_text_default"/>
 
-        <io.legado.app.lib.theme.view.ATECheckBox
-                android:id="@+id/cb_book_source"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:singleLine="true"
-                android:text=""
-                android:textColor="@color/tv_text_default"/>
+    <io.legado.app.lib.theme.view.ATESwitch
+            android:id="@+id/sw_enabled"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-        <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-            <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/iv_edit_source"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_ib_pre_round"
-                    android:contentDescription="@string/edit"
-                    android:padding="8dp"
-                    android:src="@drawable/ic_edit"
-                    app:tint="@color/tv_text_default"/>
-
-            <ImageView
-                    android:id="@+id/iv_top_source"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_ib_pre_round"
-                    android:contentDescription="@string/to_top"
-                    android:padding="8dp"
-                    android:src="@drawable/ic_top_source"
-                    app:tint="@color/tv_text_default"/>
-
-            <ImageView
-                    android:id="@+id/iv_del_source"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_ib_pre_round"
-                    android:contentDescription="@string/delete"
-                    android:padding="8dp"
-                    android:src="@drawable/ic_clear_all"
-                    app:tint="@color/tv_text_default"/>
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-    <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/btn_bg_press"/>
+    <ImageView
+            android:id="@+id/iv_more"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:background="@drawable/bg_ib_pre_round"
+            android:contentDescription="@string/to_top"
+            android:padding="8dp"
+            android:src="@drawable/ic_more_vert"
+            app:tint="@color/tv_text_default"/>
 </LinearLayout>
