--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <item name="menu_edit" type="id"/>
+    <item name="menu_del" type="id"/>
+    <item name="menu_top" type="id"/>
 
 </resources>
