--- a/app/src/main/res/layout/item_book_source.xml
+++ b/app/src/main/res/layout/item_book_source.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:background="@color/background"
               android:padding="16dp"
               android:orientation="horizontal"
               android:gravity="center_vertical">
