--- a/app/src/main/res/layout/fragment_book_source.xml
+++ b/app/src/main/res/layout/fragment_book_source.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <io.legado.app.ui.widget.TitleBar
+    <io.legado.app.ui.widget.SearchBar
             android:id="@+id/title_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
