--- a/app/src/main/res/layout/item_source_edit.xml
+++ b/app/src/main/res/layout/item_source_edit.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<io.legado.app.lib.theme.view.ATETextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<io.legado.app.lib.theme.view.ATETextInputLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
                                                  android:id="@+id/textInputLayout"
                                                  android:layout_width="match_parent"
                                                  android:layout_height="wrap_content">
