--- a/app/src/main/res/layout/view_icon.xml
+++ b/app/src/main/res/layout/view_icon.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView android:id="@+id/preview"
+<ImageView
+        android:id="@+id/preview"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="48dp"
            android:layout_height="48dp"/>
