--- a/app/src/main/res/menu/book_source.xml
+++ b/app/src/main/res/menu/book_source.xml
@@ -27,11 +27,10 @@
     </item>
 
     <item
-        android:id="@+id/action_sort"
-        android:icon="@drawable/ic_format_line_spacing"
-        android:title="@string/sort"
-        app:showAsAction="always"
-        tools:ignore="AlwaysShowAction">
+            android:id="@+id/action_sort"
+            android:icon="@drawable/ic_format_line_spacing"
+            android:title="@string/sort"
+            app:showAsAction="never">
 
         <menu>
 
