--- a/app/src/main/res/layout/item_book_group.xml
+++ b/app/src/main/res/layout/item_book_group.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:padding="5dp" />
