--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,13 +48,7 @@
         <item name="colorAccent">@color/md_grey_900</item>
     </style>
 
-    <style name="AppTheme.AlertDialog" parent="Theme.AppCompat.DayNight.Dialog.Alert">
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:background">@color/background_card</item>
-        <item name="android:textColor">@color/tv_text_default</item>
-        <item name="android:textColorPrimary">@color/tv_text_default</item>
-        <item name="textColorAlertDialogListItem">@color/tv_text_default</item>
-    </style>
+    <style name="AppTheme.AlertDialog" parent="Theme.AppCompat.DayNight.Dialog.Alert"/>
 
     //**************************************************************System
     Style******************************************************************************//
