--- a/app/src/main/res/layout/activity_qrcode_capture.xml
+++ b/app/src/main/res/layout/activity_qrcode_capture.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
     <cn.bingoogolapple.qrcode.zxing.ZXingView
         android:id="@+id/zxingview"
@@ -37,7 +36,7 @@
         app:qrcv_tipTextColor="@android:color/white"
         app:qrcv_tipTextSize="12sp"
         app:qrcv_toolbarHeight="?attr/actionBarSize"
-        app:qrcv_topOffset="65dp"
+        app:qrcv_topOffset="100dp"
         app:qrcv_verticalBias="-1" />
 
 
