--- a/app/src/main/res/layout/activity_bookshelf.xml
+++ b/app/src/main/res/layout/activity_bookshelf.xml
@@ -9,4 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_bookshelf"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
