--- a/app/src/main/res/layout/item_bookshelf_list.xml
+++ b/app/src/main/res/layout/item_bookshelf_list.xml
@@ -40,7 +40,7 @@
             android:includeFontPadding="false"
             tools:ignore="RtlHardcoded" />
 
-        <io.legado.app.ui.widget.anima.RotateLoading
+        <io.legado.app.ui.widget.RotateLoading
             android:id="@+id/rl_loading"
             android:layout_width="26dp"
             android:layout_height="26dp"
