--- a/app/src/main/res/layout/fragment_find_book.xml
+++ b/app/src/main/res/layout/fragment_find_book.xml
@@ -13,5 +13,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/find" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_find"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
