--- a/app/src/main/res/layout/item_find_book.xml
+++ b/app/src/main/res/layout/item_find_book.xml
@@ -3,4 +3,6 @@
     android:id="@+id/tv_name"
     android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:layout_margin="3dp"
+    android:padding="5dp" />
