--- a/app/src/main/res/layout/item_find_book.xml
+++ b/app/src/main/res/layout/item_find_book.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tv_name"
+    android:background="@drawable/shape_radius_10dp"
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="3dp"
+    android:layout_margin="5dp"
+    android:gravity="center"
     android:padding="5dp" />
