--- a/app/src/main/res/layout/activity_source_edit.xml
+++ b/app/src/main/res/layout/activity_source_edit.xml
@@ -43,7 +43,9 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="36dp"
+        android:background="@color/background"
+        android:elevation="3dp">
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/item_base"
