--- a/app/src/main/res/layout/item_source_edit.xml
+++ b/app/src/main/res/layout/item_source_edit.xml
@@ -2,7 +2,8 @@
 <io.legado.app.lib.theme.view.ATETextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/textInputLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingTop="3dp">
 
     <io.legado.app.lib.theme.view.ATEEditText
         android:id="@+id/editText"
