--- a/app/src/main/res/layout/activity_source_edit.xml
+++ b/app/src/main/res/layout/activity_source_edit.xml
@@ -10,6 +10,7 @@
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:fitStatusBar="false"
         app:layout_constraintTop_toTopOf="parent"
         app:title="书源编辑" />
 
